package ao.consuma.aqui.core.navigation

object NavigationTestTags {
    const val HOME = "home_screen"
    const val SEARCH = "search_screen"
    const val ORDERS = "orders_screen"
    const val MORE = "more_screen"
    const val SETTINGS = "settings_screen"
    const val HELP = "help_screen"
    const val ABOUT = "about_screen"
    const val DESIGN_SYSTEM_CATALOG = "design_system_catalog"
    const val INITIALIZATION = "initialization_screen"
    const val SPLASH = "splash_screen"
    const val BOTTOM_NAVIGATION = "bottom_navigation"
    const val BOTTOM_NAV_HOME = "bottom_nav_home"
    const val BOTTOM_NAV_SEARCH = "bottom_nav_search"
    const val BOTTOM_NAV_ORDERS = "bottom_nav_orders"
    const val BOTTOM_NAV_MORE = "bottom_nav_more"
    const val APP_SHELL = "app_shell"

    const val ONBOARDING = "onboarding_screen"
    const val ONBOARDING_PAGE = "onboarding_page"
    const val ONBOARDING_CONTINUE = "onboarding_continue"
    const val ONBOARDING_SKIP = "onboarding_skip"
    const val ONBOARDING_START = "onboarding_start"
    const val ONBOARDING_INDICATOR = "onboarding_indicator"

    const val LOCATION_SETUP = "location_setup_screen"
    const val LOCATION_USE_CURRENT = "location_use_current"
    const val LOCATION_CHOOSE_MANUALLY = "location_choose_manually"
    const val LOCATION_SKIP = "location_skip"
    const val LOCATION_CONFIRM = "location_confirm"
    const val LOCATION_CHOOSE_ANOTHER = "location_choose_another"
    const val LOCATION_SEARCH_FIELD = "location_search_field"
    const val LOCATION_LIST = "location_list"
    const val LOCATION_LIST_ITEM = "location_list_item"
    const val LOCATION_DETECTING = "location_detecting"
    const val LOCATION_DETECTED = "location_detected"
    const val LOCATION_SETTINGS = "location_settings_screen"
    const val LOCATION_SETTINGS_CHANGE = "location_settings_change"
    const val LOCATION_SETTINGS_REMOVE = "location_settings_remove"

    const val HOME_LOCATION_CARD = "home_location_card"
    const val HOME_CHANGE_LOCATION = "home_change_location"
    const val HOME_CHOOSE_LOCATION = "home_choose_location"
    const val HOME_SEARCH = "home_search"
    const val HOME_CATEGORY = "home_category"
    const val HOME_MERCHANT = "home_merchant"
    const val HOME_REFRESH = "home_refresh"
    const val HOME_REFRESHING = "home_refreshing"
    const val HOME_LOADING = "home_loading"
    const val HOME_EMPTY = "home_empty"
    const val HOME_ERROR = "home_error"
    const val HOME_OFFLINE = "home_offline"
    const val HOME_LIST = "home_list"
    const val HOME_FEATURED_LIST = "home_featured_list"
    const val HOME_DISCOVERY_LIST = "home_discovery_list"
    const val SEARCH_FIELD = "search_field"
    const val SEARCH_MERCHANT = "search_merchant"
    const val SEARCH_LOADING = "search_loading"
    const val SEARCH_EMPTY = "search_empty"
    const val SEARCH_OFFLINE = "search_offline"
    const val SEARCH_ERROR = "search_error"
    const val SEARCH_FILTER_ACTION = "search_filter_action"
    const val SEARCH_SORT_ACTION = "search_sort_action"
    const val SEARCH_ACTIVE_FILTERS = "search_active_filters"
    const val SEARCH_REFRESHING = "search_refreshing"
    const val SEARCH_LIST = "search_list"
    const val SEARCH_CATEGORY = "search_category"
    const val SEARCH_FULFILLMENT = "search_fulfillment"
    const val SEARCH_OPEN_NOW = "search_open_now"
    const val SEARCH_SORT_OPTION = "search_sort_option"
    const val SEARCH_SORT_LIST = "search_sort_list"
    const val MERCHANT_OVERVIEW = "merchant_overview"
    const val MERCHANT_LOADING = "merchant_loading"
    const val MERCHANT_OFFLINE = "merchant_offline"
    const val MERCHANT_ERROR = "merchant_error"
    const val MERCHANT_NOT_FOUND = "merchant_not_found"
    const val MERCHANT_VIEW_CATALOG = "merchant_view_catalog"
    const val MERCHANT_CATALOG_UNAVAILABLE = "merchant_catalog_unavailable"
    const val MERCHANT_LIST = "merchant_list"
    const val CATALOG = "catalog_screen"
    const val CATALOG_SEARCH = "catalog_search"
    const val CATALOG_CATEGORY = "catalog_category"
    const val CATALOG_LIST = "catalog_list"
    const val CATALOG_PRODUCT = "catalog_product"
    const val CATALOG_LOADING = "catalog_loading"
    const val CATALOG_EMPTY = "catalog_empty"
    const val CATALOG_ERROR = "catalog_error"
    const val CATALOG_OFFLINE = "catalog_offline"
    const val PRODUCT_DETAIL = "product_detail"
    const val PRODUCT_LIST = "product_list"
    const val PRODUCT_LOADING = "product_loading"
    const val PRODUCT_OFFLINE = "product_offline"
    const val PRODUCT_OPTION_GROUP = "product_option_group"
    const val PRODUCT_OPTION = "product_option"
    const val PRODUCT_QUANTITY = "product_quantity"
    const val PRODUCT_NOTE = "product_note"
    const val PRODUCT_TOTAL = "product_total"
    const val PRODUCT_ADD = "product_add"
    const val PRODUCT_ERROR = "product_error"
    const val CART = "cart"
    const val CART_EMPTY = "cart_empty"
    const val CART_LIST = "cart_list"
    const val CART_ITEM = "cart_item"
    const val CART_MERCHANT = "cart_merchant"
    const val CART_ITEM_INCREASE = "cart_item_increase"
    const val CART_ITEM_DECREASE = "cart_item_decrease"
    const val CART_ITEM_EDIT = "cart_item_edit"
    const val CART_ITEM_REMOVE = "cart_item_remove"
    const val CART_SUBTOTAL = "cart_subtotal"
    const val CART_CLEAR = "cart_clear"
    const val CART_CONTINUE = "cart_continue"
    const val CART_CONFLICT = "cart_conflict"
    const val CART_CONFLICT_KEEP = "cart_conflict_keep"
    const val CART_CONFLICT_REPLACE = "cart_conflict_replace"
    const val CART_BADGE = "cart_badge"
    const val CART_REMOVE_DIALOG = "cart_remove_dialog"
    const val CART_CLEAR_DIALOG = "cart_clear_dialog"
    const val CHECKOUT = "checkout"
    const val CHECKOUT_LIST = "checkout_list"
    const val CHECKOUT_STEP = "checkout_step"
    const val CHECKOUT_FULFILLMENT = "checkout_fulfillment"
    const val CHECKOUT_PICKUP = "checkout_pickup"
    const val CHECKOUT_DELIVERY = "checkout_delivery"
    const val CHECKOUT_CUSTOMER = "checkout_customer"
    const val CHECKOUT_CUSTOMER_NAME = "checkout_customer_name"
    const val CHECKOUT_CUSTOMER_PHONE = "checkout_customer_phone"
    const val CHECKOUT_CUSTOMER_EMAIL = "checkout_customer_email"
    const val CHECKOUT_DETAILS = "checkout_details"
    const val CHECKOUT_PICKUP_NAME = "checkout_pickup_name"
    const val CHECKOUT_PICKUP_PHONE = "checkout_pickup_phone"
    const val CHECKOUT_DELIVERY_PROVINCE = "checkout_delivery_province"
    const val CHECKOUT_DELIVERY_MUNICIPALITY = "checkout_delivery_municipality"
    const val CHECKOUT_DELIVERY_AREA = "checkout_delivery_area"
    const val CHECKOUT_DELIVERY_STREET = "checkout_delivery_street"
    const val CHECKOUT_DELIVERY_BUILDING = "checkout_delivery_building"
    const val CHECKOUT_DELIVERY_REFERENCE = "checkout_delivery_reference"
    const val CHECKOUT_DELIVERY_RECIPIENT = "checkout_delivery_recipient"
    const val CHECKOUT_DELIVERY_PHONE = "checkout_delivery_phone"
    const val CHECKOUT_DELIVERY_INSTRUCTIONS = "checkout_delivery_instructions"
    const val CHECKOUT_REVIEW = "checkout_review"
    const val CHECKOUT_ITEMS = "checkout_items"
    const val CHECKOUT_QUOTE = "checkout_quote"
    const val CHECKOUT_SUBTOTAL = "checkout_subtotal"
    const val CHECKOUT_CHARGES = "checkout_charges"
    const val CHECKOUT_TOTAL = "checkout_total"
    const val CHECKOUT_CONTINUE = "checkout_continue"
    const val CHECKOUT_BACK_STEP = "checkout_back_step"
    const val CHECKOUT_CONFIRM = "checkout_confirm"
    const val CHECKOUT_CONFLICT = "checkout_conflict"
    const val CHECKOUT_RESTART = "checkout_restart"
    const val CHECKOUT_REVIEW_CART = "checkout_review_cart"
    const val CHECKOUT_REFRESH_QUOTE = "checkout_refresh_quote"
    const val CHECKOUT_CONFIRMATION = "checkout_confirmation"
    const val MORE_LOCATION = "more_location"
}
